--- a/src/styles/02_generic/_typography.scss
+++ b/src/styles/02_generic/_typography.scss
@@ -1,8 +1,13 @@
-h1, h2, h3 {
-  font-size: clamp-calc(320px, 1800px, 32px, 64px);
-  font-weight: 400;
+h1,h2,h3 {
+  margin: 0;
+  font-weight: 700;
+  line-height: 1.1;
+}
 
-  span {
-    font-weight: 700;
-  }
+h1 {
+  font-size: clamp-calc(320px, 1800px, 32px, 64px);
+}
+
+h2 {
+  font-size: clamp-calc(320px, 1800px, 24px, 32px);
 }
