--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,11 +23,13 @@
 @import './02_generic/header';
 @import './02_generic/container';
 @import './02_generic/typography';
+@import './02_generic/flow';
 
 //
 // Components
 //
 
-@import '../components/form-elements/input/input';
 @import '../components/calculator/calculator';
+@import '../components/form-elements/input/input';
+@import '../components/form-elements/select/select';
 @import '../components/form-elements/form-element/form-element';
