--- a/src/components/calculator/_calculator.scss
+++ b/src/components/calculator/_calculator.scss
@@ -1,4 +1,103 @@
+.c-calculator {
+  border-radius: 2rem 2rem 1.2rem 1.2rem;
+  background-color: var(--color-grey-100);
+  color: var(--color-grey-20);
+  width: 55rem;
+  max-width: calc(100% - 6rem);
+  margin: 0 auto;
+  position: relative;
+  box-shadow: 0 0.8rem 1.6rem rgba(0,0,0,0.1), 0 0.3rem 0.9rem rgba(0,0,0,0.2);
+
+  &--result {
+    .calculator__result {
+      transform: translateY(20rem);
+    }
+  }
+}
+
+.calculator__header {
+  border-radius: 1.2rem 1.2rem 0 0;
+  background: var(--color-orange-40);
+  padding: 1.5rem 3rem;
+  color: var(--color-grey-100);
+  box-shadow: 0 0.8rem 1.6rem rgba(0,0,0,0.1);
+}
+
+.calculator__inner {
+  padding: 3rem;
+}
+
 .calculator__result {
-  padding: 3.2rem 0;
-  font-size: clamp-calc(320px, 1800px, 24px, 32px);
+  border-radius: 0 0 0.6rem 0.6rem;
+  padding: 1.6rem;
+  position: absolute;
+  bottom: 0;
+  width: calc(100% - 2rem);
+  left: 1rem;
+  background: var(--color-grey-80);
+  z-index: -1;
+  transform: translateY(9rem);
+  transition: transform 300ms ease-out;
+  line-height: 1.1;
+  font-size: 2.4rem;
+  color: var(--color-grey-20);
+  margin: 0;
+}
+
+.calculator__result-price {
+  color: var(--color-pink-50);
+  font-size: clamp-calc(320px, 1800px, 28px, 48px);
+  font-weight: 700;
+
+  span {
+    color: var(--color-pink-60);
+    display: inline-block;
+    padding-right: 0.8rem;
+    font-size: 3rem;
+    font-weight: 700;
+  }
+}
+
+.calculator__result-inner {
+  height: 8rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.calculator__button {
+  font-size: clamp-calc(320px, 1800px, 20px, 24px);
+  display: block;
+  text-align: center;
+  height: 6rem;
+  line-height: 6rem;
+  background: var(--color-pink-50);
+  color: var(--color-grey-90);
+  font-weight: 700;
+  width: 100%;
+  margin-top: 3rem;
+  border-radius: 0.6rem;
+  cursor: pointer;
+  transition: background 150ms;
+
+  &:hover, &:focus {
+    background: var(--color-grey-20);
+  }
+}
+
+.calculator__row {
+  display: flex;
+  position: relative;
+  width: calc(100% + 2rem);
+  left: -1rem;
+  flex-wrap: wrap;
+
+  .c-form-element {
+    flex: 1 0 0;
+    padding: 0 1rem;
+  }
+
+  .form-element__error {
+    flex: 0 0 calc(100% + 2rem);
+    padding: 0 1rem;
+  }
 }
