--- a/src/components/form-elements/form-element/_form-element.scss
+++ b/src/components/form-elements/form-element/_form-element.scss
@@ -1,9 +1,11 @@
-.c-form-element {
-  &:not(:first-child) {
-    margin-top: 2.4rem;
-  }
+.form-element__label {
+  font-weight: 700;
+  margin-bottom: 0.8rem;
 }
 
-.form-element__label {
-  margin-bottom: 0.8rem;
+.form-element__error {
+  margin-top: 0.4rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: var(--color-pink-40);
 }
