--- a/src/styles/02_generic/_header.scss
+++ b/src/styles/02_generic/_header.scss
@@ -1,4 +1,8 @@
 .c-header {
-  padding: 10vh 0 4vh;
+  padding: 10vh 0 2vh;
   text-align: center;
+
+  span {
+    color: var(--color-orange-60);
+  }
 }
